# konnyaku-gpt

./: .gitignore  LICENSE  PYPI_README.md  README.md  history.md  playground.ipynb  pyproject.toml  sample_usage.py  test.py  utils.py
README_translations/: ja.md  zh.md
models/: base.py  image_to_text.py  transcriber.py  whisper.py
src/: data_models.py  transcription_correction.py  utils.py
src/konnyaku_gpt/: __init__.py  srt_export.py  transcription_correction.py  tricks.py  utils.py
src/konnyaku_gpt/many_clips_transcription_correction/: __init__.py  many_clips_batched_corrector.py
src/konnyaku_gpt/models/: __init__.py  base.py  blip_large.py  whisper.py  whisper_cloud.py
src/konnyaku_gpt/models/gpt/: openai_gpt_server.py
src/konnyaku_gpt/transcription_correction/: __init__.py  dummy_corrector.py  multi_round_corrector.py  simple_corrector.py  transcription_corrector.py
src/many_clips_transcription_correction/: many_clips_batched_corrector.py  many_clips_transcription_corrector.py
src/models/: __init__.py  base.py  blip2_opt.py  blip_large.py  chat_completion.py  dummy_chat_completion_service.py  gpt4.py  gpt_35_turbo.py  transcriber.py  whisper.py  whisper_cloud.py
src/models/gpt/: __init__.py  gpt4.py  gpt_35_turbo.py
src/subtitle_generation/: __init__.py  default_generator.py  multimedia_llm_subtitle_generator.py  subtitle_generator.py
src/transcription_correction/: multi_round_corrector.py  simple_corrector.py
